# babeltrace

./: .gitignore  CONTRIBUTING.adoc  LICENSE  Makefile.am  README  configure.ac  groups  project.config
bindings/python/: nativebt.i
cli/: Makefile.am  babeltrace-cfg-cli-args.c
compat/: compat_uuid.c
converter/: babeltrace.c
ctf-reader-dev/: Makefile.am  ctf-reader-dev  test.c
ctf-reader-dev/metadata/: Makefile.am  ctf-parser.output
ctf-reader-proto/: ctf-fs.c
doc/doxygen-api/: Doxyfile  README.md  group-api-ref.dox  group-ctf-ir.dox  main-page.dox
doc/man/: babeltrace2-convert.1.txt  babeltrace2-filter.lttng-utils.debug-info.7.txt  babeltrace2-filter.utils.muxer.7.txt  babeltrace2-filter.utils.trimmer.7.txt  babeltrace2-help.1.txt  babeltrace2-list-plugins.1.txt  babeltrace2-query-babeltrace.support-info.7.txt  babeltrace2-query-babeltrace.trace-infos.7.txt  babeltrace2-query.1.txt  babeltrace2-run.1.txt  babeltrace2-sink.ctf.fs.7.txt  babeltrace2-sink.text.details.7.txt  babeltrace2-source.ctf.lttng-live.7.txt  babeltrace2-source.text.dmesg.7.txt  babeltrace2.1.txt  common-cli-files.txt  common-gen-options.txt  common-trimmer-time-format.txt
fd-cache/: fd-cache.c
formats/: Makefile.am
gdb/: README.md  activate.sh
include/: Makefile.am
lib/: Makefile.am  crc32.c  debuginfo.c  durin.c  lib-logging.c  logging.c  objects.c  so-info.c  so-info.h  values.c
scripts/: ir-tree-report.py
tests/: Makefile.am  tests
tests/lib/prepostconds/: Makefile.am  prepostconds-triggers.c  test.py  test_prepostconds  utils.c  utils.h
types/: enum.c  types.c
(+313 files in other folders)
